Revision history for PrankCall

{{$NEXT}}

0.003 2013-04-29

  - Release "Hello, I'd like to speak with a Mr. Snotball, first name Ura"
  - Made unit tests a bit more robust.

0.002 2013-04-26
  
  - Release "Is your refrigerator running?"
  - Added redial
  - Added ability to cache sockets
  - New override options for Timeout and Blocking
  - Pass back self in callback (Thanks Belden Lyman)

0.001  2013-04-24

  -Initial release