@@ -10,6 +10,15 @@ use Scalar::Util qw(weaken isweak);
 use Try::Tiny;
 use URI;
 
+our $VERSION = '0.004';
+
+my $USER_AGENT = "PrankCall/$VERSION";
+
+sub import {
+  my ($class, %params) = @_;
+  $USER_AGENT = $params{user_agent} if $params{user_agent};
+};
+
 sub new {
   my ($class, %params) = @_;
 
@@ -76,8 +85,13 @@ sub _build_request {
   $uri->query_form($params);
   my $headers = HTTP::Headers->new;
 
-  $headers->header('Content-Type' => 'application/x-www-form-urlencoded');
-  my $req = HTTP::Request->new($params{method} => $uri->as_string, $headers);
+  $headers->header(
+    'Content-Type' => 'application/x-www-form-urlencoded',
+    'User_Agent' => $USER_AGENT,
+    'Host' => $self->{raw_host},
+  );
+
+  my $req = HTTP::Request->new($params{method} => $uri, $headers);
 
   if ($body) {
     my $uri = URI->new('http:');
@@ -91,10 +105,30 @@ sub _build_request {
   return $req;
 }
 
+sub _generate_http_string {
+  my ($self, $req) = @_;
+
+  my $request_path = $req->uri->path_query;
+  $request_path    = "/$request_path" unless $request_path =~ m{^/};
+  $request_path   .= ' '. $req->protocol if $req->protocol;
+
+  my $http_string  = join (' ', $req->method, $request_path ) . "\n";
+
+  if ( $req->headers ) {
+    $http_string .= join ("\n", $req->headers->as_string) . "\n";
+  }
+
+  if ( $req->content ) {
+    $http_string .= join ("\n", $req->content) . "\n";
+  }
+
+  return $http_string;
+}
+
 sub _send_request {
   my ($self, $req, $callback) = @_;
 
-  my $http_string  = $req->as_string;
+  # Note: This will not play nice when proxying
   my $port         = $self->{port} || $req->uri->port || '80';
   my $raw_host     = $self->{raw_host} || $req->uri->host;
   my $timeout      = $self->{timeout};
@@ -102,6 +136,9 @@ sub _send_request {
   my $cache_socket = $self->{cache_socket} ||=0;
 
   $self->{_last_req} = $req;
+
+  # TODO: This will probably fail when hitting a proxy
+  my $http_string = $self->_generate_http_string($req);
 
   try {
     my $remote = $cache_socket && $self->{_socket} ?  $self->{_socket} :
@@ -114,12 +151,12 @@ sub _send_request {
       ) || die "Ah shoot Johny $!";
 
     $remote->autoflush(1);
-    $remote->send($http_string);
+    $remote->syswrite($http_string);
 
-    if ( $cache_socket && !$self->{_socket}) {
-      $self->{_socket} = $remote;
+    if ( $cache_socket ) {
+      $self->{_socket} = $remote if !$self->{_socket};
     } else {
-      close $remote;
+      $remote->close;
     }
 
     if ($callback) {
